--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -30,13 +30,14 @@
   }
 
   p {
-    font-size: min(1.05rem, 5vw);
-    font-weight: fonts.$wg-medium;
+    font-size: min(1rem, 3.5vw);
+    font-weight: fonts.$wg-regular;
   }
 }
 
 .searchField {
   width: 80%;
+  min-width: max-content;
   margin: 12px 0;
 
   display: flex;
@@ -44,6 +45,10 @@
 
   background-color: colors.$light-100;
   border-radius: 12px;
+
+  @media (max-width: 512px) {
+    width: 70%;
+  }
 
   input {
     flex: 1;
@@ -64,6 +69,10 @@
 
   img {
     margin: 0 10px;
+
+    @media (max-width: 512px) {
+      width: 20px;
+    }
   }
 }
 
