--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -11,6 +11,10 @@
 
   background-color: colors.$light-100;
   color: colors.$gray-100;
+
+  @media (max-width: 374px) {
+    padding: 12px;
+  }
 }
 
 .backgroundFill {
@@ -27,16 +31,38 @@
 
 .nav {
   width: 90%;
+  height: max-content;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: 900px) {
+    width: 100%;
+  }
+
+  .logo {
+    width: 250px;
+
+    @media (max-width: 530px) {
+      width: 200px;
+    }
+  }
 
   .links {
     width: 40%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 0.7rem;
+
+    @media (max-width: 1100px) {
+      width: 50%;
+    }
+
+    @media (max-width: 770px) {
+      display: none;
+    }
 
     li {
       text-transform: capitalize;
@@ -48,5 +74,31 @@
         color: colors.$primary-100;
       }
     }
+  }
+}
+
+.menuMobile {
+  @media (min-width: 770px) {
+    display: none;
+  }
+
+  @media (max-width: 770px) {
+    display: flex;
+  }
+
+  width: 40px;
+  height: 30px;
+
+  flex-direction: column;
+  justify-content: space-between;
+
+  background-color: transparent;
+
+  span {
+    width: 100%;
+    height: 4px;
+    padding: 1px;
+    background-color: colors.$primary-100;
+    border-radius: 8px;
   }
 }
