--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -1,5 +1,6 @@
 $primary-transparent: #fc4b2f0d;
 $primary-100: #fc4b2f;
+$primary-200: #ff2f0f;
 
 $secondary-transparent: #2d303942;
 $secondary-100: #0c101e;
