--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,6 +1,7 @@
 @use "@/styles/utils/colors";
+@use "@/styles/utils/components";
 
-.header {
+.header--main {
   width: 100%;
   height: 100vh;
   padding: 16px;
@@ -18,7 +19,7 @@
 }
 
 .header--fill {
-  @extend .header;
+  @extend .header--main;
   background-image: url(/assets/images/background.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -46,11 +47,21 @@
     }
   }
 
+  .btn--main {
+    @include components.button(colors.$blue-100, colors.$light-100, false);
+    padding-left: 18px;
+    padding-right: 18px;
+
+    @media (max-width: 770px) {
+      display: none;
+    }
+  }
+
   .list-links {
     width: 40%;
 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     gap: 0.7rem;
 
@@ -67,7 +78,7 @@
       z-index: 1;
 
       cursor: pointer;
-      transition: color 0.3s ease-in-out;
+      transition: color 0.4s ease-in-out;
 
       text-transform: capitalize;
       font-size: min(1.1rem, 8vw);
@@ -79,13 +90,13 @@
         z-index: -1;
         top: 0;
         bottom: 0;
-        left: -0.25em;
-        right: -0.25em;
+        left: -0.3em;
+        right: -0.3em;
 
         background-color: colors.$primary-100;
         transform-origin: center right;
         transform: scaleX(0);
-        transition: transform 0.3s ease-in-out;
+        transition: transform 0.4s ease-in-out;
       }
 
       &:hover {
@@ -95,10 +106,6 @@
           transform: scaleX(1);
           transform-origin: center left;
         }
-      }
-
-      a {
-        color: inherit;
       }
     }
   }
