--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -24,15 +24,16 @@
   }
 
   h1 {
-    color: colors.$primary-100;
-    font-size: min(5rem, 12vw);
-    font-weight: fonts.$wg-bold;
+    @include components.typography(
+      fonts.$sz-large-xx,
+      colors.$primary-100,
+      fonts.$wg-bold
+    );
     line-height: 1;
   }
 
   p {
-    font-size: min(1.2rem, 3.5vw);
-    font-weight: fonts.$wg-regular;
+    @include components.typography(fonts.$sz-medium, fonts.$wg-regular);
   }
 }
 
@@ -56,7 +57,7 @@
     padding: 14px 12px;
     border-top-left-radius: inherit;
     border-bottom-left-radius: inherit;
-    font-size: min(0.9rem, 4vw);
+    font-size: fonts.$sz-small-x;
     font-weight: fonts.$wg-medium;
 
     &::placeholder {
@@ -80,12 +81,25 @@
 .btn-group {
   display: flex;
   gap: 1.4rem;
+}
 
-  .btn--primary {
-    @include components.button(colors.$primary-100, colors.$light-100, false);
-  }
+.section__container-cards {
+  width: 100%;
+  height: 95vh;
+  padding: 16px 0;
 
-  .btn--transparent {
-    @include components.button(false, colors.$primary-100, true);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+
+  h2 {
+    text-align: center;
+
+    @include components.typography(
+      fonts.$sz-large-x,
+      colors.$primary-100,
+      fonts.$wg-bold
+    );
   }
 }
