--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,4 +1,5 @@
 @use "@/styles/utils/colors";
+@use "@/styles/utils/fonts";
 @use "@/styles/utils/components";
 
 .header--main {
@@ -81,8 +82,12 @@
       transition: color 0.4s ease-in-out;
 
       text-transform: capitalize;
-      font-size: min(1.1rem, 8vw);
-      font-weight: 500;
+
+      @include components.typography(
+        fonts.$sz-regular,
+        inherit,
+        fonts.$wg-medium
+      );
 
       &::before {
         content: " ";
