--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -3,3 +3,13 @@ $wg-regular: 400;
 $wg-medium: 500;
 $wg-semibold: 600;
 $wg-bold: 700;
+
+$sz-small-xx: 0.8rem;
+$sz-small-x: min(0.9rem, 4vw);
+$sz-small: 0.9rem;
+$sz-normal: min(1rem, 6vw);
+$sz-regular: min(1.1rem, 8vw);
+$sz-medium: min(1.16rem, 3.5vw);
+$sz-large: min(1.3rem, 6vw);
+$sz-large-x: min(2rem, 9vw);
+$sz-large-xx: min(5rem, 12vw);
