--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -4,12 +4,12 @@ $wg-medium: 500;
 $wg-semibold: 600;
 $wg-bold: 700;
 
-$sz-small-xx: 0.8rem;
-$sz-small-x: min(0.9rem, 4vw);
-$sz-small: 0.9rem;
+$sz-small-xx: 0.76rem;
+$sz-small-x: min(0.8rem, 3vw);
+$sz-small: min(0.9rem, 4vw);
 $sz-normal: min(1rem, 6vw);
 $sz-regular: min(1.1rem, 8vw);
 $sz-medium: min(1.16rem, 3.5vw);
-$sz-large: min(1.3rem, 6vw);
+$sz-large: min(1.45rem, 6vw);
 $sz-large-x: min(2rem, 9vw);
 $sz-large-xx: min(5rem, 12vw);
