--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -4,7 +4,7 @@
 
 .banner {
   width: 50%;
-  flex: 1;
+  height: 90vh;
 
   display: flex;
   flex-direction: column;
@@ -84,14 +84,23 @@
 }
 
 .section__container-cards {
-  width: 100%;
-  height: 95vh;
+  width: 80%;
+  min-height: 96vh;
   padding: 16px 0;
 
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  gap: 1rem;
+
+  @media (max-width: 710px) {
+    width: 90%;
+  }
+
+  @media (max-width: 500px) {
+    width: 100%;
+  }
 
   h2 {
     text-align: center;
@@ -101,5 +110,19 @@
       colors.$primary-100,
       fonts.$wg-bold
     );
+  }
+
+  .container-cards {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.3rem;
+
+    @media (max-width: 940px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 450px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 }
