--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -4,7 +4,7 @@
 
 .header--main {
   width: 100%;
-  height: 100vh;
+  height: max-content;
   padding: 16px;
 
   display: flex;
@@ -12,7 +12,7 @@
   align-items: center;
 
   background-color: colors.$light-100;
-  color: colors.$gray-100;
+  color: colors.$gray-200;
 
   @media (max-width: 374px) {
     padding: 12px;
