--- a/src/components/CardTool/styles.scss
+++ b/src/components/CardTool/styles.scss
@@ -47,6 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: space-around;
   gap: 12px;
 
   h4 {
@@ -60,12 +61,24 @@
   details {
     summary {
       cursor: pointer;
-
       @include components.typography(
         fonts.$sz-small,
         colors.$dark-200,
         fonts.$wg-medium
       );
+    }
+
+    ul {
+      margin-left: 24px;
+
+      li {
+        list-style: disc;
+        @include components.typography(
+          fonts.$sz-small,
+          colors.$dark-200,
+          fonts.$wg-regular
+        );
+      }
     }
   }
 
