feat(user): box de convite para acessar a página 'sobre'

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,3 +17,7 @@ main {
 .btn--transparent {
   @include components.button(false, colors.$primary-100, true);
 }
+
+.btn--black {
+  @include components.button(colors.$dark-100, colors.$light-100, false);
+}
