--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -83,16 +83,8 @@
   gap: 1.4rem;
 }
 
-.section__container-cards {
+section {
   width: 80%;
-  max-width: 1250px;
-  padding: 16px 0;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
 
   @media (max-width: 710px) {
     width: 90%;
@@ -101,6 +93,17 @@
   @media (max-width: 500px) {
     width: 100%;
   }
+}
+
+section.container--cards {
+  max-width: 1250px;
+  padding: 16px 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 
   h2 {
     text-align: center;
@@ -123,6 +126,51 @@
     }
     @media (max-width: 450px) {
       grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
+
+section.container--box-invite {
+  min-height: 45vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .box-invite {
+    width: 100%;
+    margin: 12px;
+    padding: 24px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: space-around;
+    gap: 1rem;
+
+    background: linear-gradient(
+      135deg,
+      rgba(21, 60, 195, 0.35) 0%,
+      rgba(23, 127, 185, 0.33) 49.47%,
+      rgba(8, 222, 184, 0.11) 100%
+    );
+    border-radius: 23px;
+    box-shadow: 16px 16px 43px 0px rgba(0, 0, 0, 0.35);
+
+    @media (max-width: 600px) {
+      margin: 34px 0;
+    }
+
+    h2 {
+      @include components.typography(
+        fonts.$sz-large-x,
+        colors.$dark-200,
+        fonts.$wg-bold
+      );
+
+      @media (max-width: 540px) {
+        font-size: fonts.$sz-large;
+      }
     }
   }
 }
