--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -83,7 +83,7 @@
   gap: 1.4rem;
 }
 
-section {
+section#info_section {
   width: 80%;
 
   @media (max-width: 710px) {
@@ -146,7 +146,7 @@ section.container--box-invite {
     flex-direction: column;
     align-items: baseline;
     justify-content: space-around;
-    gap: 1rem;
+    gap: 32px;
 
     background: linear-gradient(
       135deg,
