--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -4,7 +4,7 @@
 
 footer {
   width: 100%;
-  padding: 24px 16px;
+  padding: 32px 16px;
 
   display: flex;
   flex-direction: column;
@@ -16,17 +16,89 @@ footer {
   color: colors.$light-100;
 
   .container__section-links {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1rem;
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 1.5rem;
+
+    @media (max-width: 1068px) {
+      width: 90%;
+    }
+
+    @media (max-width: 868px) {
+      width: 100%;
+    }
+
+    @media (max-width: 782px) {
+      display: grid;
+      grid-template-columns: repeat(2, max-content);
+      align-items: flex-start;
+      justify-content: center;
+    }
+
+    @media (max-width: 655px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    section {
+      width: max-content;
+
+      h2 {
+        @include components.typography(
+          fonts.$sz-large,
+          colors.$primary-100,
+          fonts.$wg-semibold
+        );
+      }
+
+      ul > li a {
+        text-transform: capitalize;
+        text-decoration: underline;
+        color: colors.$light-100;
+        transition: all 0.3s;
+
+        @include components.typography(
+          fonts.$sz-normal,
+          inherit,
+          fonts.$wg-medium
+        );
+
+        &:hover {
+          color: colors.$gray-200;
+        }
+      }
+    }
 
     section.links_about {
+      width: 400px;
       display: flex;
       flex-direction: column;
       align-items: baseline;
       gap: 1rem;
 
+      @media (max-width: 655px) {
+        width: 100%;
+
+        align-items: center;
+        text-align: center;
+        margin-bottom: 24px;
+      }
+
+      p.description_about {
+        @include components.typography(
+          fonts.$sz-normal,
+          colors.$gray-100,
+          fonts.$wg-light
+        );
+      }
+
       .share-friends {
+        width: 100%;
+
         h3 {
           @include components.typography(
             fonts.$sz-medium,
@@ -40,6 +112,10 @@ footer {
           align-items: center;
           justify-content: flex-start;
           gap: 0.8rem;
+
+          @media (max-width: 655px) {
+            justify-content: center;
+          }
         }
       }
     }
