--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -12,4 +12,5 @@ $sz-regular: min(1.1rem, 8vw);
 $sz-medium: min(1.16rem, 9vw);
 $sz-large: min(1.45rem, 6vw);
 $sz-large-x: min(2rem, 8vw);
-$sz-large-xx: min(5rem, 12vw);
+$sz-large-xx: min(4rem, 12vw);
+$sz-large-xxx: min(5rem, 12vw);
