--- a/src/app/sobre/page.scss
+++ b/src/app/sobre/page.scss
@@ -7,26 +7,33 @@ section.container--hero_about {
   width: 85%;
   min-height: 85vh;
 
-  // display: flex;
-  // justify-content: space-between;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 1rem;
 
-  @media (max-width: 1090px) {
-    width: 90%;
-  }
-
-  @media (max-width: 890px) {
+  .container--content_about {
     width: 100%;
-  }
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 1rem;
 
-  @media (max-width: 612px) {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column-reverse;
-    text-align: center;
+    @media (max-width: 1090px) {
+      width: 90%;
+    }
+
+    @media (max-width: 890px) {
+      width: 100%;
+    }
+
+    @media (max-width: 612px) {
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction: column-reverse;
+      text-align: center;
+    }
   }
 
   .box--content_text {
@@ -57,9 +64,25 @@ section.container--hero_about {
     }
   }
 
-  img {
+  img.hero-about {
     width: 100%;
     height: auto;
     border-radius: 24px;
+  }
+
+  .scroll_indicator {
+    margin-top: 32px;
+    width: 55px;
+    animation: float 2.4s ease-in-out infinite;
+  }
+
+  @keyframes float {
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(30px);
+    }
   }
 }
