--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -1,6 +1,7 @@
 $primary-transparent: #fc4b2f0d;
 $primary-100: #fc4b2f;
 $primary-200: #ff2f0f;
+$primary-300: rgba(252, 75, 47, 0.44);
 
 $secondary-transparent: #2d303942;
 $secondary-100: #0c101e;
