feat(user): seção para contato

--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -8,6 +8,7 @@ $secondary-100: #0c101e;
 
 $light-100: #ffffff;
 $light-200: #efefef;
+$light-300: #d6d6d6;
 
 $gray-100: #7f8596;
 $gray-200: #5c5c5c;
@@ -19,3 +20,6 @@ $dark-300: #343434;
 
 $blue-100: #153cc3;
 $red-100: #ef1717;
+
+$green-100: #198754;
+$green-200: #11633d;
