--- a/src/app/sobre/page.scss
+++ b/src/app/sobre/page.scss
@@ -69,22 +69,6 @@ section.hero_about {
     height: auto;
     border-radius: 24px;
   }
-
-  .scroll_indicator {
-    margin-top: 32px;
-    width: 55px;
-    animation: float 2.4s ease-in-out infinite;
-  }
-
-  @keyframes float {
-    0%,
-    100% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(30px);
-    }
-  }
 }
 
 section.motivation_about {
@@ -150,6 +134,226 @@ section.motivation_about {
 
       p {
         font-size: fonts.$sz-normal;
+      }
+    }
+  }
+}
+
+section.contact {
+  width: 80%;
+  min-height: 100vh;
+  padding: 24px 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+
+  .text-content_form {
+    width: 45%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 1.6rem;
+
+    .about-feedback {
+      width: 100%;
+
+      h2 {
+        margin-bottom: 12px;
+
+        @include components.typography(
+          fonts.$sz-large-x,
+          colors.$primary-100,
+          fonts.$wg-bold
+        );
+      }
+
+      p {
+        @include components.typography(
+          fonts.$sz-medium,
+          colors.$dark-300,
+          fonts.$wg-regular
+        );
+
+        span#text--primary {
+          font-weight: fonts.$wg-medium;
+        }
+      }
+    }
+
+    .box--contribute {
+      width: 60%;
+      padding: 12px;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-start;
+      gap: 0.6rem;
+
+      border: 2px solid colors.$gray-100;
+      border-radius: 16px;
+
+      h3 {
+        @include components.typography(
+          fonts.$sz-medium,
+          colors.$dark-300,
+          fonts.$wg-bold
+        );
+      }
+
+      p {
+        @include components.typography(
+          fonts.$sz-normal,
+          colors.$dark-300,
+          fonts.$wg-regular
+        );
+      }
+    }
+  }
+
+  form {
+    width: 40%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 0.7rem;
+
+    .field {
+      width: 100%;
+      margin: 5px 0;
+
+      display: flex;
+      flex-direction: column;
+      gap: 0.2rem;
+
+      label {
+        text-transform: capitalize;
+
+        @include components.typography(
+          fonts.$sz-regular,
+          colors.$dark-300,
+          fonts.$wg-medium
+        );
+      }
+
+      input,
+      select,
+      textarea {
+        padding: 12px 8px;
+        resize: none;
+
+        border: 2px solid colors.$gray-100;
+        border-radius: 12px;
+        background-color: colors.$light-200;
+
+        @include components.typography(
+          fonts.$sz-small,
+          colors.$dark-200,
+          fonts.$wg-medium
+        );
+
+        &::placeholder,
+        option:disabled {
+          @include components.typography(
+            fonts.$sz-small,
+            colors.$gray-100,
+            fonts.$wg-medium
+          );
+        }
+
+        &:focus {
+          outline: none;
+          border-color: colors.$primary-100;
+        }
+      }
+
+      textarea {
+        height: 200px;
+        max-height: max-content;
+      }
+    }
+
+    .field-check {
+      margin: 10px 0;
+      position: relative;
+
+      display: flex;
+      align-items: center;
+      flex-direction: row-reverse;
+      gap: 1rem;
+
+      cursor: pointer;
+      user-select: none;
+
+      @include components.typography(
+        fonts.$sz-normal,
+        colors.$dark-300,
+        fonts.$wg-medium
+      );
+
+      input {
+        width: 20px;
+        height: 20px;
+      }
+
+      .checkmark {
+        width: 25px;
+        height: 25px;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        background-color: colors.$light-200;
+        border-radius: 2px;
+        border: 2px solid colors.$gray-100;
+        transition: all 0.4s;
+
+        &::after {
+          content: "";
+          width: 6px;
+          height: 12px;
+          display: none;
+
+          position: absolute;
+          left: 8px;
+          top: 3px;
+
+          border: solid colors.$light-100;
+          border-width: 0 2px 2px 0;
+          transform: rotate(45deg);
+        }
+      }
+
+      & > input:checked ~ .checkmark {
+        background-color: colors.$green-100;
+        border-color: colors.$green-200;
+      }
+
+      & > input:checked ~ .checkmark::after {
+        display: block;
+      }
+    }
+
+    .btn--send {
+      @include components.button(colors.$green-100, colors.$light-100, false);
+      width: 100px;
+      border-radius: 8px;
+
+      @include components.typography(
+        fonts.$sz-normal,
+        colors.$light-100,
+        fonts.$wg-semibold
+      );
+
+      &:disabled {
+        background: colors.$gray-200;
       }
     }
   }
