--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,7 +9,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: colors.$light-200;
+  background-color: colors.$light-100;
+}
+
+#text--primary {
+  color: colors.$primary-100;
 }
 
 section#info_section {
@@ -21,5 +25,21 @@ section#info_section {
 
   @media (max-width: 500px) {
     width: 100%;
+  }
+}
+
+.scroll_indicator {
+  margin-top: 32px;
+  width: 55px;
+  animation: float 2.4s ease-in-out infinite;
+}
+
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(30px);
   }
 }
