--- a/src/app/sobre/page.scss
+++ b/src/app/sobre/page.scss
@@ -149,6 +149,19 @@ section.contact {
   align-items: center;
   gap: 1rem;
 
+  @media (max-width: 1080px) {
+    width: 95%;
+  }
+
+  @media (max-width: 894px) {
+    width: 100%;
+    gap: 2rem;
+  }
+
+  @media (max-width: 756px) {
+    flex-direction: column;
+  }
+
   .text-content_form {
     width: 45%;
 
@@ -157,6 +170,22 @@ section.contact {
     justify-content: space-between;
     align-items: flex-start;
     gap: 1.6rem;
+
+    @media (max-width: 894px) {
+      width: 50%;
+    }
+
+    @media (max-width: 756px) {
+      width: 70%;
+    }
+
+    @media (max-width: 596px) {
+      width: 90%;
+    }
+
+    @media (max-width: 400px) {
+      width: 100%;
+    }
 
     .about-feedback {
       width: 100%;
@@ -197,6 +226,10 @@ section.contact {
       border: 2px solid colors.$gray-100;
       border-radius: 16px;
 
+      @media (max-width: 756px) {
+        width: 100%;
+      }
+
       h3 {
         @include components.typography(
           fonts.$sz-medium,
@@ -223,6 +256,22 @@ section.contact {
     justify-content: space-evenly;
     align-items: flex-start;
     gap: 0.7rem;
+
+    @media (max-width: 894px) {
+      width: 50%;
+    }
+
+    @media (max-width: 756px) {
+      width: 70%;
+    }
+
+    @media (max-width: 596px) {
+      width: 90%;
+    }
+
+    @media (max-width: 400px) {
+      width: 100%;
+    }
 
     .field {
       width: 100%;
