--- a/src/app/ferramentas/page.scss
+++ b/src/app/ferramentas/page.scss
@@ -1,4 +1,42 @@
+@use "@/styles/utils/colors";
+@use "@/styles/utils/fonts";
+@use "@/styles/utils/components";
+
 main.page-tools {
   width: 100%;
+  padding: 24px 12px 24px 0;
+
   display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 1rem;
+
+  aside {
+    border: 1px solid green;
+    width: 250px;
+    height: 800px;
+  }
+
+  article {
+    border: 2px solid red;
+    padding: 0 12px;
+
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1.8rem;
+
+    h1 {
+      margin: 32px 0;
+      text-align: center;
+      @include components.typography(
+        fonts.$sz-large-xx,
+        colors.$primary-100,
+        fonts.$wg-bold
+      );
+    }
+  }
 }
