--- a/src/app/ferramentas/page.scss
+++ b/src/app/ferramentas/page.scss
@@ -5,24 +5,65 @@
 main.page-tools {
   width: 100%;
   padding: 24px 12px 24px 0;
+  margin-bottom: 36px;
 
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 2rem;
 
   aside {
-    border: 1px solid green;
     width: 250px;
     height: 800px;
+
+    border: 2px solid colors.$gray-100;
+    border-left: 0;
+    border-radius: 12px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+
+    .field__search-tools {
+      width: 100%;
+      height: 50px;
+
+      display: flex;
+      align-items: center;
+      border-bottom: 2px solid colors.$gray-100;
+
+      input {
+        flex: 1;
+        width: 100%;
+        padding: 0 8px;
+
+        @include components.typography(
+          fonts.$sz-small,
+          colors.$dark-200,
+          fonts.$wg-medium
+        );
+
+        &:focus {
+          outline: none;
+        }
+
+        &::placeholder {
+          color: colors.$gray-100;
+        }
+      }
+
+      button {
+        max-width: fit-content;
+        margin: 0 6px;
+        cursor: pointer;
+      }
+    }
   }
 
   article {
-    border: 2px solid red;
+    width: 80%;
+    max-width: 1280px;
     padding: 0 12px;
 
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
