--- a/src/app/ferramentas/page.scss
+++ b/src/app/ferramentas/page.scss
@@ -18,14 +18,15 @@ main.page-tools {
   }
 
   aside {
-    width: 280px;
-    height: 800px;
+    width: 295px;
 
     border: 2px solid colors.$gray-100;
     border-left: 0;
     border-radius: 12px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+
+    background-color: colors.$light-200;
 
     @media (max-width: 788px) {
       display: none;
@@ -43,6 +44,7 @@ main.page-tools {
         flex: 1;
         width: 100%;
         padding: 0 8px;
+        background-color: transparent;
 
         @include components.typography(
           fonts.$sz-small,
@@ -63,6 +65,40 @@ main.page-tools {
         max-width: fit-content;
         margin: 0 6px;
         cursor: pointer;
+      }
+    }
+
+    section {
+      width: 100%;
+      padding: 16px 8px;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-start;
+      gap: 0.6rem;
+
+      .box__category-tools {
+        h3 {
+          margin-bottom: 2px;
+          @include components.typography(
+            fonts.$sz-medium,
+            colors.$dark-300,
+            fonts.$wg-bold
+          );
+        }
+
+        ul {
+          padding-left: 12px;
+
+          li {
+            @include components.typography(
+              fonts.$sz-normal,
+              colors.$dark-300,
+              fonts.$wg-regular
+            );
+          }
+        }
       }
     }
   }
