--- a/src/app/ferramentas/page.scss
+++ b/src/app/ferramentas/page.scss
@@ -17,8 +17,12 @@ main.page-tools {
     padding: 24px 12px;
   }
 
-  aside {
+  aside.menu__list-tools {
     width: 295px;
+
+    position: sticky;
+    left: 0;
+    top: 120px;
 
     border: 2px solid colors.$gray-100;
     border-left: 0;
@@ -27,6 +31,8 @@ main.page-tools {
     border-bottom-left-radius: 0;
 
     background-color: colors.$light-200;
+
+    transition: all 10s;
 
     @media (max-width: 788px) {
       display: none;
@@ -70,13 +76,29 @@ main.page-tools {
 
     section {
       width: 100%;
+      height: 500px;
       padding: 16px 8px;
+      overflow-y: scroll;
 
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: flex-start;
       align-items: flex-start;
       gap: 0.6rem;
+
+      &::-webkit-scrollbar-track {
+        background-color: colors.$light-300;
+        border-end-end-radius: 12px;
+      }
+
+      &::-webkit-scrollbar {
+        width: 8px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: colors.$primary-100;
+        border-radius: 12px;
+      }
 
       .box__category-tools {
         h3 {
@@ -97,6 +119,12 @@ main.page-tools {
               colors.$dark-300,
               fonts.$wg-regular
             );
+            transition: 0.2s all;
+
+            &:hover {
+              color: colors.$blue-100;
+              text-decoration: underline;
+            }
           }
         }
       }
