refactor(): css BEM aplicado na página Sobre

--- a/src/app/sobre/page.scss
+++ b/src/app/sobre/page.scss
@@ -2,7 +2,7 @@
 @use "@/styles/utils/fonts";
 @use "@/styles/utils/components";
 
-section.hero_about {
+section.hero--about {
   max-width: 1200px;
   width: 85%;
   min-height: 85vh;
@@ -13,7 +13,7 @@ section.hero_about {
   align-items: center;
   gap: 1rem;
 
-  .container--content_about {
+  .container__content--about {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -36,7 +36,7 @@ section.hero_about {
     }
   }
 
-  .box--content_text {
+  .box__content--text {
     flex: 1;
 
     h1 {
@@ -64,14 +64,14 @@ section.hero_about {
     }
   }
 
-  img.hero-about {
+  img.hero__about--image {
     width: 100%;
     height: auto;
     border-radius: 24px;
   }
 }
 
-section.motivation_about {
+section.motivation--about {
   width: 100%;
   min-height: 70vh;
   padding: 24px 0;
@@ -80,7 +80,7 @@ section.motivation_about {
   justify-content: center;
   align-items: center;
 
-  .box--motivation {
+  .box__motivation--content {
     max-width: 700px;
     width: 70%;
     padding: 32px;
@@ -139,7 +139,7 @@ section.motivation_about {
   }
 }
 
-section.contact {
+section.container__contact {
   width: 80%;
   min-height: 100vh;
   padding: 24px 0;
@@ -162,7 +162,7 @@ section.contact {
     flex-direction: column;
   }
 
-  .text-content_form {
+  .form--container__content--text {
     width: 45%;
 
     display: flex;
@@ -187,7 +187,7 @@ section.contact {
       width: 100%;
     }
 
-    .about-feedback {
+    .box__about--feedback {
       width: 100%;
 
       h2 {
@@ -213,7 +213,7 @@ section.contact {
       }
     }
 
-    .box--contribute {
+    .box__about--contribute {
       width: 60%;
       padding: 12px;
 
@@ -328,7 +328,7 @@ section.contact {
       }
     }
 
-    .field-check {
+    .field--check {
       margin: 10px 0;
       position: relative;
 
@@ -403,6 +403,11 @@ section.contact {
 
       &:disabled {
         background: colors.$gray-200;
+
+        &:hover {
+          opacity: 1;
+          cursor: default;
+        }
       }
     }
   }
