--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,7 +31,7 @@ section#container__info {
   }
 }
 
-.scroll_indicator {
+.scroll-indicator {
   margin-top: 32px;
   width: 55px;
   animation: float 2.4s ease-in-out infinite;
