--- a/src/app/ferramentas/page.scss
+++ b/src/app/ferramentas/page.scss
@@ -2,7 +2,7 @@
 @use "@/styles/utils/fonts";
 @use "@/styles/utils/components";
 
-main.page-tools {
+main.page--tools {
   width: 100%;
   padding: 24px 12px 24px 0;
   margin-bottom: 36px;
@@ -15,120 +15,6 @@ main.page-tools {
 
   @media (max-width: 788px) {
     padding: 24px 12px;
-  }
-
-  aside.menu__list-tools {
-    width: 295px;
-
-    position: sticky;
-    left: 0;
-    top: 120px;
-
-    border: 2px solid colors.$gray-100;
-    border-left: 0;
-    border-radius: 12px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-
-    background-color: colors.$light-200;
-
-    transition: all 10s;
-
-    @media (max-width: 788px) {
-      display: none;
-    }
-
-    .field__search-tools {
-      width: 100%;
-      height: 50px;
-
-      display: flex;
-      align-items: center;
-      border-bottom: 2px solid colors.$gray-100;
-
-      input {
-        flex: 1;
-        width: 100%;
-        padding: 0 8px;
-        background-color: transparent;
-
-        @include components.typography(
-          fonts.$sz-small,
-          colors.$dark-200,
-          fonts.$wg-medium
-        );
-
-        &:focus {
-          outline: none;
-        }
-
-        &::placeholder {
-          color: colors.$gray-100;
-        }
-      }
-
-      button {
-        max-width: fit-content;
-        margin: 0 6px;
-        cursor: pointer;
-      }
-    }
-
-    section {
-      width: 100%;
-      height: 500px;
-      padding: 16px 8px;
-      overflow-y: scroll;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-      gap: 0.6rem;
-
-      &::-webkit-scrollbar-track {
-        background-color: colors.$light-300;
-        border-end-end-radius: 12px;
-      }
-
-      &::-webkit-scrollbar {
-        width: 8px;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        background-color: colors.$primary-100;
-        border-radius: 12px;
-      }
-
-      .box__category-tools {
-        h3 {
-          margin-bottom: 2px;
-          @include components.typography(
-            fonts.$sz-medium,
-            colors.$dark-300,
-            fonts.$wg-bold
-          );
-        }
-
-        ul {
-          padding-left: 12px;
-
-          li {
-            @include components.typography(
-              fonts.$sz-normal,
-              colors.$dark-300,
-              fonts.$wg-regular
-            );
-            transition: 0.2s all;
-
-            &:hover {
-              color: colors.$blue-100;
-              text-decoration: underline;
-            }
-          }
-        }
-      }
-    }
   }
 
   article {
