--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -19,7 +19,10 @@ $dark-200: #151515;
 $dark-300: #343434;
 
 $blue-100: #153cc3;
+
 $red-100: #ef1717;
+$red-200: #ec5a5a;
 
 $green-100: #198754;
 $green-200: #11633d;
+$green-300: #53cc93;
