--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -53,7 +53,7 @@
     }
   }
 
-  .btn--support {
+  .btn--support#no-mobile {
     @media (max-width: 770px) {
       display: none;
     }
@@ -128,11 +128,13 @@
 
   width: 40px;
   height: 30px;
+  z-index: 2;
 
   flex-direction: column;
   justify-content: space-between;
 
   background-color: transparent;
+  cursor: pointer;
 
   span {
     width: 100%;
@@ -140,5 +142,55 @@
     padding: 1px;
     background-color: colors.$primary-100;
     border-radius: 8px;
+  }
+}
+
+.container__nav#mobile {
+  @media (min-width: 770px) {
+    display: none;
+  }
+
+  @media (max-width: 770px) {
+    display: flex;
+  }
+
+  width: 45%;
+  height: 100vh;
+  padding-top: 15%;
+  padding-left: 20px;
+
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1.5rem;
+
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(18px);
+
+  @media (max-width: 618px) {
+    width: 62%;
+  }
+
+  @media (max-width: 450px) {
+    padding-top: 25%;
+  }
+
+  @media (max-width: 346px) {
+    width: 100%;
+    padding-top: 25%;
+  }
+
+  .nav__links#mobile {
+    width: max-content;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    text-align: right;
   }
 }
