feat(user): animação de carregamento no menu lateral de ferramentas

--- a/src/app/ferramentas/page.scss
+++ b/src/app/ferramentas/page.scss
@@ -41,5 +41,18 @@ main.page--tools {
         fonts.$wg-bold
       );
     }
+
+    .skeleton__container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      .skeleton-loading__title {
+        width: 40%;
+        margin-bottom: 80px;
+      }
+    }
   }
 }
