--- a/src/components/AsideTools/styles.scss
+++ b/src/components/AsideTools/styles.scss
@@ -86,6 +86,8 @@ aside.menu__list--tools {
     }
 
     .box__category--tools {
+      width: 100%;
+
       h3 {
         margin-bottom: 2px;
         @include components.typography(
@@ -96,9 +98,10 @@ aside.menu__list--tools {
       }
 
       ul {
-        padding-left: 12px;
+        padding-left: 16px;
 
         li {
+          width: fit-content;
           @include components.typography(
             fonts.$sz-normal,
             colors.$dark-300,
