feat(user): atualização de alguns links da footer

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -67,6 +67,10 @@ footer {
           fonts.$wg-medium
         );
 
+        &.no-capitalize {
+          text-transform: lowercase;
+        }
+
         &:hover {
           color: colors.$gray-200;
           text-decoration: none;
