--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -103,6 +103,7 @@ footer {
 
       .share-friends {
         width: 100%;
+        margin: 12px 0 18px;
 
         h3 {
           margin-bottom: 12px;
