--- a/src/components/SearchField/styles.scss
+++ b/src/components/SearchField/styles.scss
@@ -1,13 +1,46 @@
 @use "@/styles/utils/colors";
 @use "@/styles/utils/fonts";
+@use "@/styles/utils/components";
 
-.field--tools-search {
+.field__search-tools {
+  display: flex;
+  align-items: center;
+
+  input {
+    flex: 1;
+    width: 100%;
+
+    @include components.typography(
+      fonts.$sz-small,
+      colors.$dark-200,
+      fonts.$wg-medium
+    );
+
+    &:focus {
+      outline: none;
+    }
+
+    &::placeholder {
+      color: colors.$gray-100;
+    }
+  }
+
+  button {
+    max-width: fit-content;
+    margin: 0 10px;
+
+    @media (max-width: 512px) {
+      width: 20px;
+    }
+  }
+}
+
+.field__search-tools--box {
+  @extend .field__search-tools;
+
   width: 80%;
   min-width: max-content;
   margin: 12px 0;
-
-  display: flex;
-  align-items: center;
 
   background-color: colors.$light-100;
   border-radius: 12px;
@@ -17,27 +50,21 @@
   }
 
   input {
-    flex: 1;
     padding: 14px 12px;
     border-top-left-radius: inherit;
     border-bottom-left-radius: inherit;
-    font-size: fonts.$sz-small-x;
-    font-weight: fonts.$wg-medium;
-
-    &::placeholder {
-      color: colors.$dark-300;
-    }
-
-    &:focus {
-      outline: none;
-    }
   }
+}
 
-  img {
-    margin: 0 10px;
+.field__search-tools--integrated {
+  @extend .field__search-tools;
 
-    @media (max-width: 512px) {
-      width: 20px;
-    }
+  width: 100%;
+  height: 50px;
+  border-bottom: 2px solid colors.$gray-100;
+
+  input {
+    margin: 0 8px;
+    background-color: transparent;
   }
 }
